--- a/flexy.css
+++ b/flexy.css
@@ -13,7 +13,7 @@
 /* Columns */
 .flexy-col {
   padding: 20px;
-  margin: 10px;
+  margin: 1em;
   background-color: skyblue;
   color: rgba(57, 21, 21, 1);
 }
