Add copyright and MIT license notice to top of css

--- a/flexy.css
+++ b/flexy.css
@@ -1,3 +1,11 @@
+/*
+* Flexy
+* Copyright 2017, Carlos Astrada
+* Free to use under the MIT license.
+* http://www.opensource.org/licenses/mit-license.php
+*/
+
+
 /* Container and Grid */
 
 .flexy-container {
